[tool.poetry]
name = "credit-scoring-project"
version = "0.1.0"
description = "Projet de Credit Scoring avec Pipeline ML et API FastAPI"
authors = ["M'BEY Max - YEFFE Herve - ZHAO Mucong"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

numpy = ">=2.0"
pandas = "^2.1"

scikit-learn = "^1.3"
xgboost = "^2.0"

matplotlib = "^3.8"

fastapi = "^0.104"
uvicorn = {extras = ["standard"], version = "^0.24"}
pydantic = "^2.5"

python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"